# taosmd

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STATUS.md  pyproject.toml
.claude/: a2a-session-setup.md  audit-cron-prompt.md
benchmarks/: REPRODUCE-longmemeval.md  beam_1m_confirm.sh  beam_campaign.sh  beam_campaign_resume.sh  beam_feasibility_probe.py  beam_recall_sweep.sh  beam_runner.py  beam_twophase.sh  bench_checkpoint.py  chain_tweak.sh  claim_verifier_probe.py  claims_gate_probe.py  colbert_models_probe.sh  collections_eval.py  combo_benchmark.py  config_sweep.sh  coverage_probe.py  e010_bakeoff.sh  e012_ablation.sh  e021_ablation.sh  embedding_comparison.py  eventqa_runner.py  full1540_rerank.sh  fusion_shootout.py  lateint_probe.sh  locomo_rescore.py  locomo_rescore_resume.py  locomo_rescore_streaming.py  locomo_runner.py  longmemeval_enhanced.py  longmemeval_ku_runner.py  longmemeval_matrix.py  longmemeval_recall.py  longmemeval_runner.py  mem0_locomo_runner.py  mempalace_locomo_runner.py  promptx_chain.sh  q34b_rescore.sh  realworld_llm_benchmark.py  realworld_pipeline_benchmark.py  (+10 more)
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docker/: turboquant.Dockerfile
docs/: INSTALL-AGENT-PROMPT.md  INTEGRATION-memory-config.md  agent-rules.md  bench-pause-resume.md  benchmarks.md  collections.md  migrations.md  multi-agent.md  otel-genai-mapping.md  research-report.md  serve-service.md
eval/: gen_fixtures.py  librarian_eval.py
scripts/: install-client.ps1  install-client.sh  install-server.ps1  install-server.sh  install-service.ps1  setup.sh
taosmd/: __init__.py  __main__.py  _db.py  access_tracker.py  admin.py  agents.py  api.py  archive.py  auto_setup.py  backend.py  browsing_history.py  capabilities.py  catalog_pipeline.py  categories.py  chain_of_memory.py  clag.py  cli.py  collections.py  config.py  context_assembler.py  controls.py  cross_encoder.py  crystallize.py  emem_edu.py  emem_event_lift.py  engram_router.py  generator_profiles.py  graph_expansion.py  hipporag_index.py  http_server.py  intent_classifier.py  job_worker.py  knowledge_graph.py  llm_rerank.py  mcp_server.py  memory_extractor.py  migrations.py  pending_decisions.py  predicate_vocab.py  profiles.py  (+20 more)
tests/: conftest.py  test_a2a.py  test_a2a_channels.py  test_a2a_poll.py  test_a2a_watch.py  test_admin_surface.py  test_admin_token_separation.py  test_agent_registry_data_dir.py  test_agent_rules.py  test_agents.py  test_api.py  test_archive.py  test_archive_line_count.py  test_arctic_embed.py  test_backend.py  test_backend_recipes.py  test_beam_runner.py  test_bench_checkpoint.py  test_binary_quant.py  test_catalog_pipeline.py  test_categories.py  test_chain_of_memory.py  test_claim_verifier_probe.py  test_collections_cli.py  test_collections_http.py  test_collections_ingest.py  test_collections_mcp.py  test_collections_store.py  (+82 more)
(+156 files in other folders)
