[project]
name = "taosmd"
version = "0.2.0"
description = "Framework-agnostic AI memory system. 97.0% Recall@5 on LongMemEval-S."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime",
    "numpy",
    "transformers",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
local = ["sentence-transformers"]

[tool.setuptools.packages.find]
include = ["taosmd*"]

[project.scripts]
taosmd = "taosmd.cli:main"

[project.urls]
Homepage = "https://github.com/jaylfc/taosmd"
Repository = "https://github.com/jaylfc/taosmd"
