[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taosmd"
version = "0.3.0"
description = "Framework-agnostic, local-first AI memory system. 97.0% end-to-end Judge accuracy on LongMemEval-S, measured on a low-end reference stack."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime",
    "numpy",
    "transformers",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
local = ["sentence-transformers"]
benchmarks = ["mem0ai>=0.1.0", "mempalace"]
# MCP server surface (#84) — optional so the core install stays lean.
# Install with: pip install taosmd[mcp]
mcp = ["mcp"]

[tool.setuptools.packages.find]
include = ["taosmd*"]

# Ship runtime data files (e.g. docs/agent-rules.md, read at runtime via
# importlib.resources.files("taosmd")). Without this they are omitted from the
# wheel and agent_rules() raises FileNotFoundError on a pip install (#66).
[tool.setuptools.package-data]
taosmd = ["docs/**/*.md", "webui/**/*", "skills/**/*"]

[project.scripts]
taosmd = "taosmd.cli:main"

[project.urls]
Homepage = "https://github.com/jaylfc/taosmd"
Repository = "https://github.com/jaylfc/taosmd"
